update in javascript and styles in responsive

--- a/dictionary-js/css/_input.scss
+++ b/dictionary-js/css/_input.scss
@@ -36,6 +36,8 @@ $color-white: #fff;
     height: 40px;
     padding: 5px 15px;
     border-radius: 10px;
+    font-size: large;
+    color: $color-font;
   }
 
   .btn-search {
