--- a/dictionary-js/css/main.css
+++ b/dictionary-js/css/main.css
@@ -69,6 +69,8 @@ body {
   height: 40px;
   padding: 5px 15px;
   border-radius: 10px;
+  font-size: large;
+  color: #494949;
 }
 .container-input .btn-search {
   width: 20%;
@@ -138,15 +140,36 @@ body {
   font-weight: 600;
 }
 
+.container-result .meanings {
+  border-left: 4px solid #1a5bc2;
+  padding-left: 15px;
+  padding-block: 5px;
+  border-radius: 10px;
+}
+.container-result .meanings::-webkit-scrollbar {
+  width: 0px;
+}
+.container-result h5 {
+  font-size: 2.2rem;
+  color: #494949;
+  font-style: italic;
+  font-weight: 400;
+}
 .container-result h6 {
   font-size: 1.7rem;
   font-weight: 500;
   font-style: oblique;
   margin-bottom: 15px;
-  border-left: 2px solid #494949;
   padding-left: 20px;
+  border-left: 3px solid #494949;
 }
 
+@media (max-width: 568px) {
+  .container-result .meanings {
+    max-height: 250px;
+    overflow-y: auto;
+  }
+}
 .container-secondary {
   max-width: 700px;
   width: 90%;
