--- a/dictionary-js/css/_result.scss
+++ b/dictionary-js/css/_result.scss
@@ -17,6 +17,7 @@ $color-white: #fff;
 }
 
 .title-result {
+  position: relative;
   margin-bottom: 25px;
 
   h4 {
@@ -28,6 +29,17 @@ $color-white: #fff;
   span {
     font-size: $font-span;
     @include props-font-result();
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+
+    width: 100%;
+    height: 10px;
+
+    border-top: 2px solid $color-neutra;
+    margin-top: 70px;
   }
 }
 
@@ -63,9 +75,7 @@ $color-white: #fff;
     font-style: oblique;
 
     margin-bottom: 15px;
-    padding-left: 20px;
-
-    border-left: 3px solid $color-font;
+    padding-left: 10px;
   }
 }
 
