--- a/dictionary-js/css/_result.scss
+++ b/dictionary-js/css/_result.scss
@@ -36,10 +36,9 @@ $color-white: #fff;
     position: absolute;
 
     width: 100%;
-    height: 10px;
 
-    border-top: 2px solid $color-neutra;
-    margin-top: 70px;
+    border-top: 1.5px solid $color-neutra;
+    margin-top: 6rem;
   }
 }
 
