--- a/dictionary-js/css/main.css
+++ b/dictionary-js/css/main.css
@@ -125,9 +125,8 @@ body {
   content: "";
   position: absolute;
   width: 100%;
-  height: 10px;
-  border-top: 2px solid #cacaca;
-  margin-top: 70px;
+  border-top: 1.5px solid #cacaca;
+  margin-top: 6rem;
 }
 
 .description {
